--- a/index.html
+++ b/index.html
@@ -2,6 +2,10 @@
 <html lang="en">
 <head>
     <title>This is the first time I am working with git-hub. </title>
+    <p>hey! now I am pushing a new message again. </p>
+    <p>I am trying to learn everyting properly. Allah, please help me to learn this tutorial</p>
+    <p>I am trying to learn everyting properly. Allah, please help me to learn this tutorial</p>
+    <p>Hey there I am adding some more lines to make it clear. </p>
 </head>
 <body>
     
