--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <p>I am trying to learn everyting properly. Allah, please help me to learn this tutorial</p>
     <p>I am trying to learn everyting properly. Allah, please help me to learn this tutorial</p>
     <p>Hey there I am adding some more lines to make it clear. </p>
+    <H1>Another trial</H1>
 </head>
 <body>
     
