adding button done

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <H1>Another trial</H1>
 </head>
 <body>
-    
+    <h1>Creation of new button. </h1>
+    <button>click me</button>
 </body>
 </html>
