--- a/index.html
+++ b/index.html
@@ -1,15 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>This is the first time I am working with git-hub. </title>
-    <p>hey! now I am pushing a new message again. </p>
-    <p>I am trying to learn everyting properly. Allah, please help me to learn this tutorial</p>
-    <p>I am trying to learn everyting properly. Allah, please help me to learn this tutorial</p>
-    <p>Hey there I am adding some more lines to make it clear. </p>
-    <H1>Another trial</H1>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
 </head>
 <body>
-    <h1>Creation of new button. </h1>
-    <button>click me</button>
+    <h1>Still paracticing</h1>
+    <p>
+        This is the 6th tutorial. Jankar Mahbabub is teaching us about common error.
+    </p>
+    <p> I am still in button creation branch</p>
+
 </body>
 </html>
