--- a/index.html
+++ b/index.html
@@ -1,14 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>This is the first time I am working with git-hub. </title>
-    <p>hey! now I am pushing a new message again. </p>
-    <p>I am trying to learn everyting properly. Allah, please help me to learn this tutorial</p>
-    <p>I am trying to learn everyting properly. Allah, please help me to learn this tutorial</p>
-    <p>Hey there I am adding some more lines to make it clear. </p>
-    <H1>Another trial</H1>
+    <h1> My new life in Netherlands. </h1>
 </head>
 <body>
-    
+<p>InsaAllah in very near future. I Allah will help to make it success for going Netherlands and fulfill my dream.</p>
 </body>
 </html>
